# TextTabBench

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  requirements.txt
configs/: dataset_configs.py
dataset/classification/: config.json
dataset/regression/: config.json
datasets_notebooks/: empty_template.ipynb
datasets_notebooks/extra_datasets/: IT_eu_salary_data_.ipynb  covid_trials_time_data.ipynb  diabetes_data.ipynb  drugs_rating_data.ipynb  ins_complaint_money_data.ipynb  lending_club_data.ipynb  okcupid_attr_data.ipynb  stackoverflow_salary_data.ipynb
datasets_notebooks/other_datasets/: AutoML_Multimodal_Tabular_datasets.md  CARTE_datasets.md
datasets_notebooks/paper_datasets/classification/: HS_cards_data.ipynb  OSHA_accidents_data.ipynb  complaints_data.ipynb  fraud_detec_data.ipynb  kickstarter_data.ipynb  spotify_genre_data.ipynb
datasets_notebooks/paper_datasets/regression/: airbnb_price_data.ipynb  beer_rating_data.ipynb  calif_houses_data.ipynb  laptops_data.ipynb  mercari_price_data.ipynb  sf_permit_time_data.ipynb  wine_cost_data.ipynb
examples/: example_single_dataset.py
examples/text_processors/: preprocess_text.py
src/: config.py
src/dataloader_functions/: download_data.py  load_and_pp_raw_data.py  notebook_common.py
src/dataloader_functions/utils/: data_2_df.py  df_downsample.py  log_msgs.py
src/download_datasets/: download_datasets.py  generate_config_json.py
